add sequence display on activity

--- a/webapp/templates/staticStream.html
+++ b/webapp/templates/staticStream.html
@@ -34,7 +34,9 @@
 								<h3 class="text-center">Detected Sound</h3>
 							</div>
 						</div>
-						<div id="uploadFile_processed">
+                        <div id="chart_display" style="width: 80em; height: 10em; margin:5px;">
+						</div>
+                        <div id="uploadFile_processed">
 						</div>
 					</div>
 
