--- a/webapp/templates/about.html
+++ b/webapp/templates/about.html
@@ -4,7 +4,7 @@
 
 <div class="jumbotron">
     <div class="container text-center">
-        <h1 class="footer-text">Our team</h1>
+        <h1 class="titleFont">Our team</h1>
         <p>&nbsp;</p>
         <!-- <p>Team member details as show below......</p> -->
     </div>
@@ -17,7 +17,7 @@
                 <img src="{{ url_for('static', filename='img/people1.png')}}" class="img-circle img-thumbnail" style="width:100%" alt="Image">
             </a>
             <div>
-                <h4 class="footer-text">Weiwei, ISS</h4>
+                <h4 class="titleFont">Weiwei, ISS</h4>
             </div>
         </div>
 
@@ -26,7 +26,7 @@
                 <img src="{{ url_for('static', filename='img/people2.png')}}" class="img-circle img-thumbnail" style="width:100%" alt="Image">
             </a>
             <div>
-                <h4 class="footer-text">Zhengmin, ISS</h4>
+                <h4 class="titleFont">Zhengmin, ISS</h4>
             </div>
         </div>
 
@@ -35,7 +35,7 @@
                 <img src="{{ url_for('static', filename='img/people3.png')}}" class="img-circle img-thumbnail" style="width:100%" alt="Image">
             </a>
             <div>
-                <h4 class="footer-text">Norman, ISS</h4>
+                <h4 class="titleFont">Norman, ISS</h4>
             </div>
         </div>
 
@@ -44,7 +44,7 @@
                 <img src="{{ url_for('static', filename='img/people1.png')}}" class="img-circle img-thumbnail" style="width:100%" alt="Image">
             </a>
             <div>
-                <h4 class="footer-text">Austin, ISS</h4>
+                <h4 class="titleFont">Austin, ISS</h4>
             </div>
         </div>
     </div>
