--- a/webapp/static/css/main.css
+++ b/webapp/static/css/main.css
@@ -27,7 +27,10 @@ footer {
 .content {
     padding-bottom: 50px;
     min-height: 900px;
-    background-color: #021319;
+    background-color: white;
+    background-image: url(../img/background3.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .jumbotron {
@@ -38,7 +41,7 @@ footer {
 }
 
 .jumbotron-content {
-    color: white;
+    color: black;
 }
 
 .image {
@@ -51,7 +54,7 @@ footer {
 }
 
 .jumbotron {
-    background-image: url(../img/background.jpg);
+    background-image: url(../img/background2.jpg);
 }
 
 .bg-dark {
@@ -68,7 +71,7 @@ footer {
 }
 
 .titleFont{
-    color: #3FF8F8;
+    color: #000000;
 }
 
 .navImg{
@@ -78,7 +81,7 @@ footer {
 .description { 
     width:inherit; /* width: 100px; */
     white-space: pre-wrap;
-    color:  white;
+    color:  black;
     margin-top:2em;
 }
 
@@ -129,7 +132,7 @@ footer {
 }
 
 .jumbotron {
-    background-image: url(../img/background.jpg);
+    background-image: url(../img/background2.jpg);
 }
 
 .bg-dark {
@@ -141,23 +144,8 @@ footer {
     font-family: Russo none;
 }
 
-.footer-text{
-    color:white;
-}
-
-.titleFont{
-    color: #3FF8F8;
-}
-
 .navImg{
     border-style: solid;
-}
-
-.description { 
-    width:inherit; /* width: 100px; */
-    white-space: pre-wrap;
-    color:  white;
-    margin-top:2em;
 }
 
 .img-thumbnail {
