--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -4,7 +4,7 @@
 <!--<div class="jumbotron" style="background-image:url({{ url_for('static', filename='img/main.png')}})" >-->
 <div class="jumbotron" style="background-color: coral" >
     <div class="jumbotron-content container text-center">
-        <h1>Baby Safety Monitor</h1>
+        <h1 class="baseTitle">Baby Safety Monitor</h1>
         <p>&nbsp;</p>
         <!-- <p>Explore new technology when touching "Me"...</p> -->
     </div>
@@ -15,7 +15,7 @@
         <div class="col-md-3 offset-md-4">
             <h3 class="titleFont">Video Processing</h3>
             <a href="/staticstream">
-                <img src="{{ url_for('static', filename='img/static_pro.gif')}}" class="img-responsive navImg" style="width:100%" alt="Image">
+                <img src="{{ url_for('static', filename='img/video.gif')}}" class="img-responsive navImg" style="width:100%" alt="Image">
             </a>
             <p class="description">This function allows user to process static media for baby safety monitor including baby activity and sound.</p>
         </div>
