--- a/webapp/templates/staticStream.html
+++ b/webapp/templates/staticStream.html
@@ -21,7 +21,7 @@
                                 <input id="uploadVideo" name="uploadVideo" type="file" >
                             </div>
                         </div>
-                        <div class="text-center">
+                        <div class="text-center" style="padding-bottom: 1em;">
                             <button type="button" class="btn btn-lg btn-success btn-upload-3"><i class="fa fa-upload"></i> Upload</button>
                             <button type="button" class="btn btn-lg btn-secondary btn-reset-3"><i class="fa fa-ban"></i> Clear</button>
                         </div>
@@ -34,6 +34,10 @@
 								<h3 class="text-center">Detected Sound</h3>
 							</div>
 						</div>
+                        <div>
+                            <div style="height: 15px;width: 15px;background-color: #a4cbad; display: inline-block;"></div> <div style="display: inline;">Not Crying</div>
+                            <div style="height: 15px;width: 15px;background-color: #f4c0b4; display: inline-block;"></div> <div style="display: inline;">Crying</div>
+                        </div>
                         <div id="chart_display" style="width: 80em; height: 10em; margin:5px;">
 						</div>
                         <div id="uploadFile_processed">
