--- a/webapp/templates/staticStream.html
+++ b/webapp/templates/staticStream.html
@@ -6,15 +6,11 @@
     <!-- Page Content -->
     <div class="container-fluid static-box">
         <div id="page-content-wrapper">
-			<div class="row">
-				<div class="offset-md-3">
-					<h1 class="titleFont">Static Video Processing</h1>
-				</div>
-			</div>
+
 			
             <div id="static_content">
                 <div class="container-fluid" id="main">
-                    <h2 class="text-center">Please upload a baby video</h2>
+                    <h2 class="text-center">Please upload a video with baby in the crib</h2>
                     <form action="/uploadvideo" method="post" enctype="multipart/form-data">
                         <div class="form-group">
                             <div class="custom-file">
@@ -22,7 +18,7 @@
                             </div>
                         </div>
                         <div class="text-center" style="padding-bottom: 1em;">
-                            <button type="button" class="btn btn-lg btn-success btn-upload-3"><i class="fa fa-upload"></i> Upload</button>
+                            <button type="button" class="btn btn-lg btn-success btn-upload-3"><i class="fa fa-upload"></i> Process</button>
                             <button type="button" class="btn btn-lg btn-secondary btn-reset-3"><i class="fa fa-ban"></i> Clear</button>
                         </div>
                     </form>
