add histogram chart

--- a/webapp/templates/staticStream.html
+++ b/webapp/templates/staticStream.html
@@ -27,15 +27,17 @@
                     <div id="processresultdiv" >
 						<div class="form-group row">
 							<div class="col">
-								<h3 class="text-center">Detected Sound</h3>
+								<h3 class="text-center">Analyze completed, below shows the action sequences.</h3>
 							</div>
 						</div>
                         <div>
                             <div style="height: 15px;width: 15px;background-color: #a4cbad; display: inline-block;"></div> <div style="display: inline;">Not Crying</div>
                             <div style="height: 15px;width: 15px;background-color: #f4c0b4; display: inline-block;"></div> <div style="display: inline;">Crying</div>
                         </div>
-                        <div id="chart_display" style="width: 80em; height: 10em; margin:5px;">
+                        <div id="ganttChart_display" style="width: 80em; height: 13em; margin:5px;">
 						</div>
+                        <div id="columnChart_display_action" style="width: 40em; height: 15em; margin-top:15px;display:inline-block;"></div>
+                        <div id="columnChart_display_audio" style="width: 40em; height: 15em; margin-top:15px;display:inline-block;"></div>
                         <div id="uploadFile_processed">
 						</div>
 					</div>
