--- a/webapp/templates/base.html
+++ b/webapp/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Baby Safety monitor</title>
+    <title>Video-Based Multi-Modal Intelligent Infant Activities Tracking System</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -35,7 +35,7 @@
         <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
             <div class="container-fluid">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="#">Baby Monitor</a>
+                    <a class="navbar-brand" href="#">Video-Based Multi-Modal Intelligent Infant Activities Tracking System</a>
                 </div>
                 <div class="collapse navbar-collapse" id="myNavbar">
                     <ul class="nav navbar-nav mr-auto">
